--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
   --border-color: #144fc6;
+  --fill-color: #6ab3f8;
 }
 * {
   box-sizing: border-box;
@@ -38,3 +39,32 @@ h3 {
   flex-direction: column;
   overflow: hidden;
 }
+
+.cup.cup-sm {
+  height: 95px;
+  width: 50px;
+  border-radius: 0 0 15px 15px;
+  margin: 5px;
+  background-color: rgba(255, 255, 255, 0.9);
+  cursor: pointer;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: 0.3ms ease;
+}
+
+.cup.cup-sm.full {
+  background-color: var(--fill-color);
+  color: #fff;
+}
+
+.cups {
+  display: flex;
+  flex-wrap: wrap;
+  width: 280px;
+  align-items: center;
+  justify-content: center;
+}
+
+
