--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h3 {
   align-items: center;
   justify-content: center;
   text-align: center;
-  transition: 0.3ms ease;
+  transition: 0.3s ease;
 }
 
 .cup.cup-sm.full {
@@ -67,4 +67,32 @@ h3 {
   justify-content: center;
 }
 
+.remained {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex: 1;
+  transition: 0.3s ease;
+}
 
+.remained span {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.remained small {
+  font-size: 12px;
+}
+
+.percentage {
+  background-color: var(--fill-color);
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 0;
+  transition: 0.3s ease;
+}
